--- a/index.html
+++ b/index.html
@@ -36,46 +36,35 @@ h2{margin:0 0 12px 0}
 <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.91.0/lib/index.iife.min.js"></script>
 
 <script>
-(function () {
+(async function() {
   const HELIUS_RPC = 'https://mainnet.helius-rpc.com/?api-key=b933e448-6fee-4016-b4ec-3c6c19a46775';
-  const FALLBACK_RPC = 'https://solana-api.projectserum.com';
   const TOKEN_PROGRAM = 'TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA';
+  const DUST_THRESHOLD_USD = 0.01; // treat accounts < $0.01 as empty/dust
 
-  const logsEl = document.getElementById('logs');
   const walletSelect = document.getElementById('walletSelect');
   const connectBtn = document.getElementById('connectWallet');
   const disconnectBtn = document.getElementById('disconnectWallet');
   const reclaimBtn = document.getElementById('reclaimRentBtn');
+  const logsEl = document.getElementById('logs');
 
   let wallet = null;
   let publicKey = null;
   let connection = null;
 
-  function logStep(msg) {
+  function log(msg){
     console.log(msg);
     logsEl.innerText += msg + '\n';
     logsEl.scrollTop = logsEl.scrollHeight;
   }
 
-  function waitForWeb3(timeoutMs = 5000) {
-    return new Promise((resolve, reject) => {
-      const start = Date.now();
-      (function poll() {
-        const g = window.solanaWeb3 || window.web3 || window.web3js || window.solanaWeb3js;
-        if (g) return resolve(g);
-        if (Date.now() - start > timeoutMs) return reject(new Error('web3 global not found'));
-        setTimeout(poll, 150);
-      })();
-    });
-  }
+  function clearLogs(){ logsEl.innerText=''; }
 
   function detectWallets() {
-    const out = [];
-    if (window.phantom?.solana?.isPhantom) out.push({ wallet: window.phantom.solana, name: 'Phantom' });
-    if (window.solana && window.solana.isPhantom && !out.find(x=>x.name==='Phantom')) out.push({ wallet: window.solana, name: 'Phantom' });
-    if (window.solflare && window.solflare.isSolflare) out.push({ wallet: window.solflare, name: 'Solflare' });
-    if (window.Slope) { try { out.push({ wallet: new window.Slope(), name: 'Slope' }); } catch(e) {} }
-    return out;
+    const wallets = [];
+    if(window.phantom?.solana?.isPhantom) wallets.push({wallet: window.phantom.solana, name:'Phantom'});
+    if(window.solflare && window.solflare.isSolflare) wallets.push({wallet: window.solflare, name:'Solflare'});
+    if(window.Slope){ try { wallets.push({wallet: new window.Slope(), name:'Slope'}); } catch(e){} }
+    return wallets;
   }
 
   function populateWalletDropdown() {
@@ -87,162 +76,122 @@ h2{margin:0 0 12px 0}
       opt.textContent = w.name;
       walletSelect.appendChild(opt);
     });
-    logStep('Detected wallets: ' + detected.map(d => d.name).join(', '));
+    if(detected.length === 0) log('❌ No wallets detected. Install Phantom, Solflare, or Slope.');
+    else log('Detected wallets: ' + detected.map(d=>d.name).join(', '));
   }
 
   function getSelectedWallet() {
     const name = walletSelect.value;
-    return detectWallets().find(w => w.name === name);
+    return detectWallets().find(w=>w.name===name);
   }
 
-  function buildConnection(web3Global) {
-    try { return new web3Global.Connection(HELIUS_RPC, 'confirmed'); }
-    catch(e) { logStep('⚠️ Helius RPC failed, falling back: ' + e.message); }
-    try { const g = window.solanaWeb3 || window.web3 || window.web3js || window.solanaWeb3js; return new g.Connection(FALLBACK_RPC, 'confirmed'); }
-    catch(e) { logStep('❌ Cannot create RPC: '+e.message); throw e; }
-  }
-
-  async function init() {
+  function buildConnection() {
     try {
-      const web3Global = await waitForWeb3(7000).catch(() => window.solanaWeb3 || window.web3 || window.web3js || window.solanaWeb3js);
-      if (!web3Global) { logStep('❌ web3 not found'); return; }
-      logStep('✅ web3 loaded');
-      connection = buildConnection(web3Global);
-      logStep('✅ RPC ready');
-      populateWalletDropdown();
-    } catch(e){ logStep('❌ Init error: '+e.message); console.error(e); }
+      return new solanaWeb3.Connection(HELIUS_RPC, 'confirmed');
+    } catch(e){
+      log('❌ RPC connection failed: '+e.message);
+      throw e;
+    }
   }
 
-  async function connectWalletFunc() {
-    logsEl.innerText = '';
-    const wObj = getSelectedWallet();
-    if (!wObj) { logStep('❌ Select a wallet first'); return; }
+  async function connectWalletFunc(){
+    clearLogs();
+    const sel = getSelectedWallet();
+    if(!sel){ log('❌ Select a wallet first'); return; }
     try {
-      logStep('Connecting ' + wObj.name + '...');
-      const resp = await wObj.wallet.connect();
-      publicKey = resp?.publicKey || wObj.wallet?.publicKey;
-      if (publicKey && publicKey.toString) publicKey = publicKey.toString();
-      logStep('Connected: ' + publicKey);
+      log('Connecting ' + sel.name + '...');
+      const resp = await sel.wallet.connect();
+      publicKey = resp?.publicKey || sel.wallet?.publicKey;
+      if(publicKey?.toString) publicKey = publicKey.toString();
+      wallet = sel.wallet;
+      log('Connected: ' + publicKey);
 
-      // SOL Balance
-      const lamports = await connection.getBalance(new (window.solanaWeb3 || window.web3 || window.web3js).PublicKey(publicKey));
-      logStep('💰 SOL Balance: ' + (lamports / 1e9).toFixed(6) + ' SOL');
+      if(!connection) connection = buildConnection();
 
-      // SPL Tokens
+      // SOL balance
+      const lamports = await connection.getBalance(new solanaWeb3.PublicKey(publicKey));
+      log('💰 SOL Balance: ' + (lamports/1e9).toFixed(6) + ' SOL');
+
+      // SPL token accounts
       const tokenAccounts = await connection.getParsedTokenAccountsByOwner(
-        new (window.solanaWeb3 || window.web3 || window.web3js).PublicKey(publicKey),
-        { programId: new (window.solanaWeb3 || window.web3 || window.web3js).PublicKey(TOKEN_PROGRAM) }
+        new solanaWeb3.PublicKey(publicKey),
+        { programId: new solanaWeb3.PublicKey(TOKEN_PROGRAM) }
       );
-      if (!tokenAccounts?.value?.length) logStep('No SPL tokens found.');
+
+      if(!tokenAccounts?.value?.length) log('No SPL tokens found.');
       else tokenAccounts.value.forEach((t,i)=>{
-        try {
-          const info = t.account.data.parsed.info;
-          logStep(`${i+1}. Mint: ${info.mint}, Amount: ${info.tokenAmount.uiAmountString}`);
-        } catch(e){ logStep(`${i+1}. Token account (raw): ${JSON.stringify(t)}`); }
+        const info = t.account.data.parsed.info;
+        log(`${i+1}. Mint: ${info.mint}, Amount: ${info.tokenAmount.uiAmountString}`);
       });
-
-      wallet = wObj.wallet;
-    } catch(err){ logStep('❌ Connect error: '+err.message); console.error(err); }
+    } catch(err){ log('❌ Connect failed: '+err.message); }
   }
 
-  async function disconnectWalletFunc() {
-    if (!wallet) { logStep('❌ No wallet connected'); return; }
-    try { await wallet.disconnect(); logStep('Wallet disconnected'); wallet=null; publicKey=null; }
-    catch(err){ logStep('❌ Disconnect error: '+err.message); console.error(err); }
+  async function disconnectWalletFunc(){
+    if(!wallet){ log('❌ No wallet connected'); return; }
+    try {
+      if(wallet.disconnect) await wallet.disconnect();
+      log('Wallet disconnected');
+      wallet=null; publicKey=null;
+    } catch(err){ log('❌ Disconnect error: '+err.message); }
   }
 
-    // ---------- Reclaim Rent ----------
-    const DUST_THRESHOLD_USD = 0.01; // treat accounts < 1 cent as empty
-  
-  async function getTokenPrices(mints) {
-    // Helius API: fetch multiple token prices at once
-    const res = await fetch('https://api.helius.xyz/v0/token-prices?api-key=b933e448-6fee-4016-b4ec-3c6c19a46775', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ mints })
+  async function getTokenPrices(mints){
+    if(!mints.length) return {};
+    const res = await fetch('https://api.helius.xyz/v0/token-prices?api-key=b933e448-6fee-4016-b4ec-3c6c19a46775',{
+      method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify({mints})
     });
     const data = await res.json();
-    const priceMap = {};
-    data.forEach(p => {
-      priceMap[p.mint] = p.price || 0;
-    });
-    return priceMap;
+    const map = {};
+    data.forEach(p=>map[p.mint]=p.price || 0);
+    return map;
   }
-  
-  async function reclaimRent() {
+
+  async function reclaimRent(){
+    if(!wallet || !publicKey){ log('❌ Connect wallet first.'); return; }
     clearLogs();
     log('🧹 Reclaim Rent started...');
-    await session.disconnectAll();
-  
-    const walletObj = getSelectedWallet();
-    if(!walletObj){ log('❌ No wallet selected.'); return; }
-  
-    let wallet, pubkey;
-    try {
-      const result = await session.connect(walletObj);
-      wallet = result.wallet;
-      pubkey = result.publicKey;
-      log('Connected wallet: ' + pubkey);
-    } catch(err) {
-      log('❌ Wallet connect failed: ' + err.message);
-      return;
-    }
-  
-    // Fetch token accounts
+
+    // fetch token accounts
     let tokenAccounts;
     try {
       tokenAccounts = await connection.getParsedTokenAccountsByOwner(
-        new solanaWeb3.PublicKey(pubkey),
+        new solanaWeb3.PublicKey(publicKey),
         { programId: new solanaWeb3.PublicKey(TOKEN_PROGRAM) }
       );
-    } catch(e) {
-      log('❌ Failed to fetch token accounts: ' + e.message);
-      return;
-    }
-  
-    if(!tokenAccounts || tokenAccounts.value.length === 0) {
-      log('✅ No token accounts found.');
-      return;
-    }
-  
-    // Gather mints to query prices
-    const mints = tokenAccounts.value.map(t => t.account.data.parsed.info.mint);
+    } catch(e){ log('❌ Fetch token accounts failed: '+e.message); return; }
+
+    if(!tokenAccounts?.value?.length){ log('✅ No token accounts found.'); return; }
+
+    // query prices
+    const mints = tokenAccounts.value.map(t=>t.account.data.parsed.info.mint);
     const priceMap = await getTokenPrices(mints);
-  
-    // Filter "empty" accounts by USD value
-    const empty = tokenAccounts.value.filter(t => {
+
+    // filter empty/dust
+    const empty = tokenAccounts.value.filter(t=>{
       const amount = Number(t.account.data.parsed.info.tokenAmount.uiAmount);
       const mint = t.account.data.parsed.info.mint;
       const price = priceMap[mint] || 0;
-      const valueUSD = amount * price;
-      return valueUSD < DUST_THRESHOLD_USD;
+      const usdValue = amount*price;
+      return usdValue < DUST_THRESHOLD_USD;
     });
-  
-    if(empty.length === 0){
-      log('✅ No empty (dust) token accounts found — nothing to reclaim.');
-      return;
-    }
-  
+
+    if(empty.length===0){ log('✅ No empty/dust token accounts to reclaim.'); return; }
     log(`🪣 Found ${empty.length} empty/dust token account(s). Closing...`);
-  
+
     for(const entry of empty){
-      const tokenAcctPubkey = entry.pubkey;
+      const tokenPub = entry.pubkey;
       try{
         const keys=[
-          {pubkey: tokenAcctPubkey,isSigner:false,isWritable:true},
-          {pubkey:new solanaWeb3.PublicKey(pubkey),isSigner:false,isWritable:true},
-          {pubkey:new solanaWeb3.PublicKey(pubkey),isSigner:true,isWritable:false}
+          {pubkey: tokenPub,isSigner:false,isWritable:true},
+          {pubkey:new solanaWeb3.PublicKey(publicKey),isSigner:false,isWritable:true},
+          {pubkey:new solanaWeb3.PublicKey(publicKey),isSigner:true,isWritable:false}
         ];
-        const ix = new solanaWeb3.TransactionInstruction({
-          keys,
-          programId: new solanaWeb3.PublicKey(TOKEN_PROGRAM),
-          data: Buffer.from([9])
-        });
+        const ix = new solanaWeb3.TransactionInstruction({keys,programId:new solanaWeb3.PublicKey(TOKEN_PROGRAM),data:Buffer.from([9])});
         const tx = new solanaWeb3.Transaction().add(ix);
-        tx.feePayer = new solanaWeb3.PublicKey(pubkey);
-        const { blockhash } = await connection.getLatestBlockhash();
+        tx.feePayer = new solanaWeb3.PublicKey(publicKey);
+        const {blockhash} = await connection.getLatestBlockhash();
         tx.recentBlockhash = blockhash;
-  
+
         let sig;
         if(wallet.signTransaction){
           const signedTx = await wallet.signTransaction(tx);
@@ -250,37 +199,29 @@ h2{margin:0 0 12px 0}
         } else if(wallet.signAndSendTransaction){
           const res = await wallet.signAndSendTransaction(tx);
           sig = res?.signature || res;
-        } else{
-          throw new Error('Wallet cannot sign transaction');
-        }
+        } else { throw new Error('Wallet cannot sign transaction'); }
+
         await connection.confirmTransaction(sig,'confirmed');
-        log(`✅ Closed ${tokenAcctPubkey.toString()} — tx ${sig}`);
-      } catch(err){
-        log(`❌ Failed to close ${tokenAcctPubkey.toString()}: ${err?.message||String(err)}`);
-      }
+        log(`✅ Closed ${tokenPub.toString()} — tx ${sig}`);
+      } catch(err){ log(`❌ Failed ${tokenPub.toString()}: ${err?.message||String(err)}`); }
     }
-  
     log('🎉 Reclaim run complete.');
   }
-  }
 
-  // Wire buttons
+  // button listeners
   connectBtn.addEventListener('click', connectWalletFunc);
   disconnectBtn.addEventListener('click', disconnectWalletFunc);
-  reclaimBtn.addEventListener('click', reclaimRentFunc);
+  reclaimBtn.addEventListener('click', reclaimRent);
 
-  // Init
-  init();
-
-  // Refresh wallet dropdown periodically (detect new wallets)
+  // init
+  connection = buildConnection();
+  populateWalletDropdown();
   setInterval(()=>{
-    const had = walletSelect.options.length;
     const detected = detectWallets();
-    if(detected.length + 1 !== had){ populateWalletDropdown(); }
-  }, 3000);
+    if(detected.length + 1 !== walletSelect.options.length) populateWalletDropdown();
+  },3000);
 
 })();
 </script>
 </body>
 </html>
-
